--- a/Dockerfile.in
+++ b/Dockerfile.in
@@ -12,11 +12,26 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM ARG_FROM
+FROM golang:1.7-alpine
 
-MAINTAINER Krishnath Poologanathan <krishnath.poologanathna@ericsson.com>
+MAINTAINER Krishnath Poologanathan <pkrishnath@gmail.com>
 
-ADD bin/ARG_ARCH/ARG_BIN /ARG_BIN
+ENV VERSION v2.2.3
+ENV FILENAME helm-${VERSION}-linux-amd64.tar.gz
 
-USER nobody:nobody
-ENTRYPOINT ["/ARG_BIN"]
+RUN mkdir -p /go/src/app
+WORKDIR /go/src/app
+
+ADD *.go /go/src/app/
+ADD vendor /go/src/app/vendor
+
+RUN go-wrapper download
+RUN go-wrapper install
+
+ADD http://storage.googleapis.com/kubernetes-helm/${FILENAME} /tmp
+
+RUN tar -zxvf /tmp/${FILENAME} -C /tmp \
+  && mv /tmp/linux-amd64/helm /bin/helm \
+  && rm -rf /tmp
+
+CMD ["app"]
